# fractal

./: CMakeLists.txt  README.md
script/: plot.gp
src/: CMakeLists.txt  square.c  triangle.c  var.c
